--- a/trunk/resources/locale/en-US/crashme.dtd
+++ b/trunk/resources/locale/en-US/crashme.dtd
@@ -5,4 +5,4 @@
 <!ENTITY crashme.stack.label "Stack overflow!">
 <!ENTITY crashme.purevirt.label "Pure virtual call!">
 <!ENTITY crashme.iph.label "Invalid parameter to CRT method!">
-
+<!ENTITY crashme.objc.label "ObjC Exception!">
